--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/yelunl/blok_tech/issues"
   },
   "homepage": "https://github.com/yelunl/blok_tech#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
   }
 }
