--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.36.0"
   }
 }
